# matchi

./: .gitignore  .gitmodules  ARCHITECTURE.md  COPYRIGHT  README.md  fv_cells.lib  fv_cells.v  main.sh  matchi_cells.lib  matchi_release  msk_presynth.tcl  synth.tcl
.github/workflows/: ci.yml
fullverif-check/: Cargo.toml
fullverif-check/src/: ARCHITECTURE.md  TODO.txt  clk_vcd.rs  comp_prop.rs  composite_gadget.rs  config.rs  deep_verif.rs  error.rs  fv_cells.rs  gadget_internals.rs  gadgets.rs  inner_affine.rs  lib.rs  main.rs  netlist.rs  new_clk_vcd.rs  raw_internals.rs  recsim.rs  simulation.rs  tg_graph.rs  top_sim.rs  type_utils.rs  utils.rs  vcd_writer.rs
fullverif-check/src/gadget/: mod.rs  pipeline.rs  top.rs  yosys_ext.rs
fullverif-check/src/module/: builder.rs  instance.rs  yosys_ext.rs
fullverif-check/src/sim/: TODO.txt  clk_vcd.rs  combinational_sort.rs  fv_cells.rs  gadget.rs  mod.rs  module.rs  netlist.rs  recsim.rs  simulation.rs  top_sim.rs  vcd_writer.rs  wire_value.rs
fullverif-check/src/sim/gadget/: gadget_builder.rs  mod.rs  pipeline.rs  top.rs  yosys_ext.rs
fullverif-check/src/sim/module/: builder.rs  instance.rs  mod.rs  yosys_ext.rs
matchi/: Cargo.toml
matchi/src/: TODO.txt  clk_vcd.rs  config.rs  main.rs  netlist.rs  recsim.rs  simulation.rs  top_sim.rs  vcd_writer.rs  wire_value.rs
matchi/src/gadget/: gadget_builder.rs  mod.rs  top.rs  yosys_ext.rs
matchi/src/module/: builder.rs  gates.rs  instance.rs  mod.rs  yosys_ext.rs
test/: Makefile
test2/: Makefile  msk_presynth.tcl  tb.v  test.v
testa/: Makefile  tb.v  x.v
