[package]
name = "fullverif"
version = "0.1.0"
authors = ["Gaëtan Cassiers <gaetan.cassiers@uclouvain.be>"]
edition = "2021"
about = "Composition-based verification of masked hardware circuits."

[dependencies]
itertools = "0.12"
petgraph = "0.6"
log = { version = "0.4", features = [
    "max_level_trace",
    "release_max_level_info",
] }
env_logger = "0.11"
vcd = "0.7"
yosys-netlist-json = "0.1.0"
clap = { version = "4.4", features = ["derive"] }
phantom_newtype = "0.2"
derivative = "2.2"
derive_more = "0.99"
fnv = "1.0.7"

#flame = { version = "0.2.2", optional = true }
#flamer = { version = "0.3", optional = true }

[profile.release]
debug = true
#lto = true


#[features]
#default = []
#flame_it = ["flame", "flamer"]
