[package]
name = "fullverif"
version = "0.1.0"
authors = ["Gaëtan Cassiers <gaetan.cassiers@uclouvain.be>"]
edition = "2021"
about = "Composition-based verification of masked hardware circuits."

[dependencies]
itertools = "0.12"
petgraph = "0.6"
log = { version = "0.4", features = [
    "max_level_trace",
    "release_max_level_info",
] }
env_logger = "0.11"
vcd = { git = "https://github.com/cassiersg/rust-vcd.git", branch = "idcode" } # Merged, but not released yet.
#vcd = "0.7.0"
yosys-netlist-json = "0.1.0"
clap = { version = "4.4", features = ["derive"] }
derivative = "2.2"
derive_more = "0.99"
fnv = "1.0.7"

anyhow = "1.0"
index_vec = { git = "https://github.com/cassiersg/index_vec.git", branch = "checked-arithmetic" }
indexmap = "2.2.2"
bit-set = "0.5.3"
enum_dispatch = "0.3.12"

#flame = { version = "0.2.2", optional = true }
#flamer = { version = "0.3", optional = true }

#[profile.dev]
#opt-level = 1
#debug = 0
#strip = "debuginfo"
#[profile.release]
#debug = true
#lto = true


#[features]
#default = []
#flame_it = ["flame", "flamer"]
